--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="sd-nav--content">
               <img class="sd-section--header sd-nav--logo" src="images/logo.png">
               <h3 class="sd-section--header sd-nav--header">Hack Day</h3>
-              <ul class="sd-nav--list">
+              <ul class="sd-nav--list show-for-large">
                 <a href="#about"><li>About</li></a>
                 <a href="#resources"><li>Resources</li></a>
                 <a href="#schedule"><li>Schedule</li></a>
