--- a/index.html
+++ b/index.html
@@ -126,9 +126,11 @@
             <h2 class="sd-section--header">Resources</h2>
           </div>
           <div class="sd-section--tile medium-4 columns">
-            <div class="sd-hex sd-list-hex sd-hex--unbordered" id="sd-hex-workshops">
-              <h2>3</h2>
-              <p>Workshops</p>
+            <div class="sd-list-hex--wrapper">
+              <div class="sd-hex sd-list-hex sd-hex--unbordered" id="sd-hex-workshops">
+                <h2>3</h2>
+                <p>Workshops</p>
+              </div>
             </div>
             <div class="sd-section--tile-content">
               <h3 class="sd-section--subheader">Workshops</h3>
@@ -138,9 +140,11 @@
             </div>
           </div>
           <div class="sd-section--tile medium-4 columns">
-            <div class="sd-hex sd-list-hex sd-hex--unbordered" id="sd-hex-mentors">
-              <h2>5 <span class="sd-header--small">to</span> 1</h2>
-              <p>Hacker : Mentor Ratio</p>
+            <div class="sd-list-hex--wrapper">
+              <div class="sd-hex sd-list-hex sd-hex--unbordered" id="sd-hex-mentors">
+                <h2>5 <span class="sd-header--small">to</span> 1</h2>
+                <p>Hacker : Mentor Ratio</p>
+              </div>
             </div>
             <div class="sd-section--tile-content">
               <h3 class="sd-section--subheader">Much Mentorship</h3>
@@ -150,9 +154,11 @@
             </div>
           </div>
           <div class="sd-section--tile medium-4 columns">
-            <div class="sd-hex sd-list-hex sd-hex--unbordered" id="sd-hex-hackers">
-              <h2>60</h2>
-              <p>Hackers</p>
+            <div class="sd-list-hex--wrapper">
+              <div class="sd-hex sd-list-hex sd-hex--unbordered" id="sd-hex-hackers">
+                <h2>60</h2>
+                <p>Hackers</p>
+              </div>
             </div>
             <div class="sd-section--tile-content">
               <h3 class="sd-section--subheader">A Tight-Knit Hackathon</h3>
@@ -161,6 +167,19 @@
               </p>
             </div>
           </div>
+          <!-- EXPERIMENTAL -->
+          <!-- <div class="sd-section--tile large-6 columns">
+            <div class="sd-hex sd-hex--unbordered sd-list-hex--hoz" id="sd-hex-mentors">
+              <h2>5 <span class="sd-header--small">to</span> 1</h2>
+              <p>Hacker : Mentor Ratio</p>
+            </div>
+            <div class="sd-section--tile-content sd-list--hoz">
+              <h3 class="sd-section--subheader">Much Mentorship</h3>
+              <p>
+                We'll have mentors available day and night with knowledge and tips to help you out.
+              </p>
+            </div>
+          </div> -->
         </div>
       </div>
 
@@ -169,18 +188,18 @@
         <div class="row sd-white-bg">
           <div class="small-12 medium-6 large-5 columns sd-hextion sd-hextion--left">
             <div class="sd-hex sd-hex--inset">
-              <h2>6</h2>
+              <h2>3</h2>
               <p>Workshops</p>
             </div>
             <div class="sd-hextion--content">
-              <h1 class="sd-hextion--header">We'll hold workshops</h1>
+              <h1 class="sd-hextion--header">We'll hold workshops on:</h1>
               <ul class="sd-list sd-hextion--list">
-                <li>HTML/CSS</li>
-                <li>NodeJS/Javascript</li>
-                <li>Data Science with Python</li>
-                <li>Intro to VR</li>
-                <li>iOS Workshop</li>
-                <li>Unity Workshop</li>
+                <li><strong>HTML/CSS</strong>: Designing and building your front-end</li>
+                <li><strong>NodeJS/Javascript</strong>: Getting started with web development</li>
+                <li><strong>Data Science with Python</strong>: Introductory data analysis using Python libraries</li>
+                <!-- <li>Intro to VR</li> -->
+                <!-- <li>iOS Workshop</li> -->
+                <!-- <li>Unity Workshop</li> -->
               </ul>
             </div>
           </div>
