Fix nav fadein and very small mobile screen hero issues

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   <div class="off-canvas-wrapper wrapper">
     <div class="off-canvas-wrapper-inner wrapper--inner">
       <!-- TODO: add fixed nav bar -->
-      <div class="sd-nav sd-nav--fixed">
+      <div class="sd-nav sd-nav--fixed sd-nav--top">
         <div class="row">
           <div class="small-12 columns">
             <div class="sd-nav--content">
-              <a href="/">
+              <a href="/" class="sd-nav--logolink">
                 <img class="sd-nav--logo" src="images/logo.png">
                 <h3 class="sd-nav--header">Hack Day</h3>
               </a>
