Live footer links

--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
           <div class="sd-footer--background-helper"></div>
           <div class="sd-footer--links">
             <ul class="sd-footer--list">
-              <li><a><i class="fa fa-facebook-square"></i></a></li>
-              <li><a><i class="fa fa-twitter-square"></i></a></li>
+              <li><a href="https://www.facebook.com/SDHacks/"><i class="fa fa-facebook-square"></i></a></li>
+              <li><a href="https://twitter.com/sdhacks"><i class="fa fa-twitter-square"></i></a></li>
             </ul>
           </div>
           <div class="sd-footer--info">
