--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               </a>
               <ul class="sd-nav--list show-for-large">
                 <a href="#about"><li>About</li></a>
-                <a href="#resources"><li>Resources</li></a>
+                <!-- <a href="#resources"><li>Resources</li></a> -->
                 <a href="#schedule"><li>Schedule</li></a>
                 <a href="#faq"><li>FAQ</li></a>
                 <li class="sd-nav--cta"><a href="" class="sd-button button">Apply</a></li>
@@ -43,9 +43,9 @@
                   <li>
                     <a class="sd-nav--mobile-link" href="#about">About</a>
                   </li>
-                  <li>
+<!--                   <li>
                     <a class="sd-nav--mobile-link" href="#resources">Resources</a>
-                  </li>
+                  </li> -->
                   <li>
                     <a class="sd-nav--mobile-link" href="#schedule">Schedule</a>
                   </li>
@@ -107,12 +107,15 @@
           <div class="small-12 medium-6 large-5 columns sd-hextion sd-hextion--right sd-hextion--shifted">
             <div class="sd-hex sd-hex--inset">
               <h2>1.5k</h2>
-              <p>Total Hackers</p>
+              <p>Influenced</p>
             </div>
             <div class="sd-hextion--content">
-              <h2 class="sd-hextion--header">SD Hacks Recap:</h2>
+              <h2 class="sd-hextion--header">Keep up with us!</h2>
               <p>
-                So far, SD Hacks has influenced well over a thousand hackers from across California (and beyond!). With Hack Days, we plan on focusing on mentorship and learning for hackers old and new.
+                So far, SD Hacks has influenced well over a thousand hackers from across California (and beyond!). Hear about our latest email updates here:
+              </p>
+              <p>
+                <input class="button sd-button sd-button--input" placeholder="Get Updates!">
               </p>
             </div>
           </div>
@@ -120,7 +123,7 @@
       </div>
 
       <!-- Second (split content) info section -->
-      <div class="sd-section" id="resources">
+<!--       <div class="sd-section" id="resources">
         <div class="row sd-white-bg">
           <div class="medium-12 columns">
             <h2 class="sd-section--header">Resources</h2>
@@ -167,36 +170,23 @@
               </p>
             </div>
           </div>
-          <!-- EXPERIMENTAL -->
-          <!-- <div class="sd-section--tile large-6 columns">
-            <div class="sd-hex sd-hex--unbordered sd-list-hex--hoz" id="sd-hex-mentors">
-              <h2>5 <span class="sd-header--small">to</span> 1</h2>
-              <p>Hacker : Mentor Ratio</p>
-            </div>
-            <div class="sd-section--tile-content sd-list--hoz">
-              <h3 class="sd-section--subheader">Much Mentorship</h3>
-              <p>
-                We'll have mentors available day and night with knowledge and tips to help you out.
-              </p>
-            </div>
-          </div> -->
         </div>
       </div>
-
+ -->
       <!-- Schedule section -->
       <div class="sd-section">
         <div class="row sd-white-bg">
           <div class="small-12 medium-6 large-5 columns sd-hextion sd-hextion--left">
             <div class="sd-hex sd-hex--inset">
               <h2>3</h2>
-              <p>Workshops</p>
+              <p>Hours</p>
             </div>
             <div class="sd-hextion--content">
-              <h1 class="sd-hextion--header">We'll hold workshops on:</h1>
+              <h1 class="sd-hextion--header">Web Development Workshop</h1>
+              <p>We'll hold a comprehensive workshop to help you get started with web development.
               <ul class="sd-list sd-hextion--list">
+                <li><strong>NodeJS/Javascript</strong>: Introductory Javascript and Web Development</li>
                 <li><strong>HTML/CSS</strong>: Designing and building your front-end</li>
-                <li><strong>NodeJS/Javascript</strong>: Getting started with web development</li>
-                <li><strong>Data Science with Python</strong>: Introductory data analysis using Python libraries</li>
                 <!-- <li>Intro to VR</li> -->
                 <!-- <li>iOS Workshop</li> -->
                 <!-- <li>Unity Workshop</li> -->
@@ -280,9 +270,9 @@
                 </p>
               </li>
               <li>
-                <h3 class="sd-section--subheader">What if I don't have a team?</h3>
+                <h3 class="sd-section--subheader">Do I need a team to sign up?</h3>
                 <p>
-                  We allow teams of up to four hackers. Though we recommend signing up with your team, don't worry if you don't have one beforehand because we'll have a team formation session in the beginning!
+                  Yes, since Hack Days are smaller events, we want to ensure everyone who comes is able to work with a team! Signing up with a team allows us to accept the people you'd like to work with without leaving any stragglers behind! Teams of up to 4 are allowed.
                 </p>
               </li>
               <li>
@@ -367,7 +357,6 @@
             <img class="tesc-logo" src="images/tesc_white.svg" />
           </div>
         </div>
-        <!-- TODO: add fontawesome icons -->
       </div>
     </div>
   </div>
