Fixed static header spacing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#about"><li>About</li></a>
                 <a href="#schedule"><li>Schedule</li></a>
                 <a href="#faq"><li>FAQ</li></a>
-                <li class="sd-nav--cta"><a href="" class="sd-button button">Apply</a></li>
+                <li class="sd-nav--cta"><a href="" class="sd-button button sd-button--short">Apply</a></li>
               </ul>
 
               <a class="mobile-link hide-for-large">
