Link tesc logo, add subtle button hover effects and bolden some content

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
           <div class="small-12 medium-6 large-7 columns sd-section sd-section--content">
             <h2 class="sd-section--header">About</h2>
             <p>
-              Last September, SD Hacks brought over 800 hackers from all over California. With Hack Days, we plan to expand our reach to hackers old and new at UCSD and focus on providing the best environment, workshops, and mentorship possible. It's time to team up (if you want) and build that cool application, robot, or whatever you've always wanted to build.
+              Last September, SD Hacks brought over 800 hackers from all over California. With Hack Days, we plan to extend our reach to hackers old and new at UCSD and focus on providing the best environment, workshops, and mentorship possible. It's time to team up and build that cool application, robot, or whatever you've always wanted to build.
             </p>
-            <h3 class="sd-section--subheader">Where At?</h3>
+            <h3 class="sd-section--subheader">Where and When?</h3>
             <p>
-              This Hack Day will be held in the Qualcomm Room in Jacobs Hall.
+              This Hack Day will be held in the Qualcomm Room in Jacobs Hall, from 5:00 PM 1/13 to 6:30 PM 1/14.
             </p>
           </div>
           <div class="small-12 medium-6 large-5 columns sd-hextion sd-hextion--right sd-hextion--shifted">
@@ -254,37 +254,37 @@
               <li>
                 <h3 class="sd-section--subheader">What's Hack Day?</h3>
                 <p>
-                  Hack day is a smaller, 24-hour UCSD only hackathon hosted by SD Hacks focused on mentorship, learning, and shipping cool projects.
+                  Hack day is a smaller, 24-hour UCSD only hackathon hosted by SD Hacks focused on <strong>mentorship</strong>, <strong>learning</strong>, and <strong>shipping cool projects</strong>.
                 </p>
               </li>
               <li>
                 <h3 class="sd-section--subheader">Where and When?</h3>
                 <p>
-                  This Hack Day will be held in the Qualcomm Room in Jacobs Hall. Plan on arriving at 5:00 PM Friday and departing 6:30 PM Saturday. 
+                  This Hack Day will be held in the <strong>Qualcomm Room in Jacobs Hall</strong>. Plan on arriving at <strong>5:00 PM Friday 1/13</strong> and departing <strong>6:30 PM Saturday 1/14</strong>. 
                 </p>
               </li>
               <li>
                 <h3 class="sd-section--subheader">What should I bring?</h3>
                 <p>
-                  Bring your student ID, computer, any peripherals you may need (chargers, monitors, etc.), any hardware that you plan on using, and an open mind. 
+                  Bring your <strong>student ID</strong>, <strong>computer</strong>, any <strong>peripherals</strong> you may need (chargers, monitors, etc.), any <strong>hardware</strong> that you plan on using, and an <strong>open mind</strong>. 
                 </p>
               </li>
               <li>
                 <h3 class="sd-section--subheader">Do I need a team to sign up?</h3>
                 <p>
-                  Yes, since Hack Days are smaller events, we want to ensure everyone who comes is able to work with a team! Signing up with a team allows us to accept the people you'd like to work with without leaving any stragglers behind! Teams of up to 4 are allowed.
+                  <strong>Yes</strong>, since Hack Days are smaller events, we want to ensure everyone who comes is able to work with a team. Signing up with a team allows us to accept the people you'd like to work with without leaving any stragglers behind! <strong>Teams of up to 4 are allowed</strong>.
                 </p>
               </li>
               <li>
                 <h3 class="sd-section--subheader">Are there any rules?</h3>
                 <p>
-                  As a Major League Hacking member event, we are adopting Major League Hacking’s <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf">Code of Conduct</a> which requires you to respect others and help us keep SD Hacks a safe space for everyone. If you want your project to be considered for an award, you may only submit work that your team wrote during the hackathon.
+                  As a Major League Hacking member event, we are adopting Major League Hacking’s <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf">Code of Conduct</a> which requires you to respect others and help us keep Hack Day a safe space for everyone. If you want your project to be considered for an award, you may only submit work that your team wrote during the hackathon.
                 </p>
               </li>
               <li>
                 <h3 class="sd-section--subheader">Have an unanswered question?</h3>
                 <p>
-                  Feel free to email us at <a href="mailto:hello@sdhacks.io">hello@sdhacks.io</a>
+                  Feel free to <strong>email us</strong> at <a href="mailto:hello@sdhacks.io">hello@sdhacks.io</a>
                 </p>
               </li>
             </ul>
@@ -354,7 +354,9 @@
             </ul>
           </div>
           <div class="sd-footer--info">
-            <img class="tesc-logo" src="images/tesc_white.svg" />
+            <a class="tesc-logo" href="http://tesc.ucsd.edu">
+              <img src="images/tesc_white.svg" />
+            </a>
           </div>
         </div>
       </div>
