--- a/index.html
+++ b/index.html
@@ -92,22 +92,15 @@
               <p>
                 So far, SD Hacks has influenced well over a thousand hackers from across California (and beyond!). Hear about our latest email updates here:
               </p>
-<<<<<<< HEAD
-              <form id="updates-form" action="">
-                <input class="button sd-button sd-button--input" required id="updates-button" placeholder="Get Updates!">
-                <button class="button sd-button success no-opacity" id="updates-button-submit">Submit</button>
-              </form>
-=======
               <p>
                 <form id="update_signup" action="//sdhacks.us9.list-manage.com/subscribe/post?u=2b76757d9b200f72632d7330a&amp;amp;id=c99e3caa24" method="post" target="_blank" novalidate="novalidate" class="subscribe">
                   <div style="position: absolute; left: -5000px;" aria-hidden="true">
                     <input type="text" name="b_2b76757d9b200f72632d7330a_c99e3caa24" tabindex="-1" value=""/>
                   </div>
-                  <input id="sdhx-email" type="email" value="" name="EMAIL" placeholder="Email" required="required" class="subscribe__email"/>
-                  <input id="sdhx-subscribe" type="submit" name="subscribe" value="Get Updates!" class="subscribe__button"/>
+                  <input id="updates-email" type="email" value="" name="EMAIL" placeholder="Email" required="required" class="subscribe--email"/>
+                  <input id="updates-subscribe" type="submit" name="subscribe" value="Get Updates!" class="subscribe--button"/>
                 </form>
               </p>
->>>>>>> 53625e43db31427d1a45d93986b208b7b0239946
             </div>
           </div>
         </div>
