Minor text and padding changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Hack Day 2017</title>
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/foundation.min.css" />
+  <link rel="stylesheet" href="css/foundation.min.css">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.4/foundation.min.css" integrity="sha256-NqI559iHqiWe5VxDi9mXE8i83ghn8Ru8BINyiPN7lDg=" crossorigin="anonymous" /> -->
   <link rel="shortcut icon" href="images/logo.png">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -14,7 +14,6 @@
 <body>
   <div class="off-canvas-wrapper wrapper">
     <div class="off-canvas-wrapper-inner wrapper--inner">
-      <!-- TODO: add fixed nav bar -->
       <div class="sd-nav sd-nav--fixed sd-nav--top">
         <div class="row">
           <div class="small-12 columns">
@@ -97,7 +96,7 @@
                   <div style="position: absolute; left: -5000px;" aria-hidden="true">
                     <input type="text" name="b_2b76757d9b200f72632d7330a_c99e3caa24" tabindex="-1" value=""/>
                   </div>
-                  <input id="updates-email" type="email" value="" name="EMAIL" placeholder="Email" required="required" class="subscribe--email"/>
+                  <input id="updates-email" type="email" value="" name="EMAIL" placeholder="email@sdhacks.io" required="required" class="subscribe--email"/>
                   <input id="updates-subscribe" type="submit" name="subscribe" value="Get Updates!" class="subscribe--button"/>
                 </form>
               </p>
@@ -208,7 +207,7 @@
               <li>
                 <h3 class="sd-section--subheader">Are there any rules?</h3>
                 <p>
-                  As a Major League Hacking member event, we are adopting Major League Hacking’s <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf">Code of Conduct</a> which requires you to respect others and help us keep Hack Day a safe space for everyone. If you want your project to be considered for an award, you may only submit work that your team wrote during the hackathon.
+                  As a Major League Hacking member event, we are adopting Major League Hacking's <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf">Code of Conduct</a> which requires you to respect others and help us keep Hack Day a safe space for everyone. If you want your project to be considered for an award, you may only submit work that your team wrote during the hackathon.
                 </p>
               </li>
               <li>
@@ -226,7 +225,7 @@
               <p>Volunteers</p>
             </div>
             <div class="sd-hextion--content">
-              <h2 class="sd-hextion--header">Wanna help out?</h2>
+              <h2 class="sd-hextion--header">Come help us out!</h2>
               <p>
                 If you're interested in helping out or mentoring, volunteer through here:
               </p>
