--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 Qualcomm Room, Jacobs Hall<br>
                 January 13-14, 2017
               </h2>
-              <h4>Applications open soon!</h4>
+              <h4>Applications open January 4th!</h4>
               <!-- <a class="sd-button button">Apply</a> -->
               <!-- <a class="sd-button button success">Volunteer</a> -->
               <form id="update_signup" action="//sdhacks.us9.list-manage.com/subscribe/post?u=2b76757d9b200f72632d7330a&amp;amp;id=c99e3caa24" method="post" target="_blank" novalidate="novalidate" class="subscribe">
