Add twitter meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <title>Hack Day 2017</title>
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="SD Hacks Hack Day">
+  <meta property="og:description" content="Website of SD Hacks Hack Day">
+  <meta property="og:image" content="images/logo.png"><meta property="og:image:secure_url" content="https://hackday.sdhacks.io/images/logo.png">
+  <meta property="og:image:type" content="image/png"><title>SD Hacks Hack Day</title>
+  <meta name="theme-color" content="#19A3C5">
+  <meta name="description" content="Website of SD Hacks Hack Day">
+  <meta name="keywords" content="SD Hacks, 2017, SD Hacks 2016, hackathon, UCSD, UC, University of California San Diego, San Diego, Hack Day">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="css/foundation.min.css">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.4/foundation.min.css" integrity="sha256-NqI559iHqiWe5VxDi9mXE8i83ghn8Ru8BINyiPN7lDg=" crossorigin="anonymous" /> -->
   <link rel="shortcut icon" href="images/logo.png">
