Changed volunteer to mentor

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 January 13-14, 2017
               </h2>
               <a class="sd-button button" href="https://tesc.typeform.com/to/YJuhQH">Apply</a>
-              <a class="sd-button button success" href="https://tesc.typeform.com/to/cXwqkW">Volunteer</a>
+              <a class="sd-button button success" href="https://tesc.typeform.com/to/cXwqkW">Mentor</a>
             </div>
           </div>
         </div>
@@ -230,14 +230,14 @@
           <div class="small-12 medium-6 large-5 columns sd-hextion sd-hextion--right">
             <div class="sd-hex sd-hex--inset">
               <h2>??</h2>
-              <p>Volunteers</p>
+              <p>Mentors</p>
             </div>
             <div class="sd-hextion--content">
               <h2 class="sd-hextion--header">Come help us out!</h2>
               <p>
-                If you're interested in helping out or mentoring, volunteer through here:
+                If you're interested in mentoring, sign up here:
               </p>
-              <p><a class="button sd-button success" href="https://tesc.typeform.com/to/cXwqkW">Volunteer</a></p>
+              <p><a class="button sd-button success" href="https://tesc.typeform.com/to/cXwqkW">Mentor</a></p>
             </div>
           </div>
         </div>
