Changed footer on mobile Replaced logo pngs with svgs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="small-12 columns">
             <div class="sd-nav--content">
               <a href="/" class="sd-nav--logolink">
-                <img class="sd-nav--logo" src="images/logo.png">
+                <img class="sd-nav--logo" src="images/logo.svg">
                 <h3 class="sd-nav--header">Hack Day</h3>
               </a>
               <ul class="sd-nav--list show-for-large">
@@ -63,7 +63,7 @@
         <div class="sd-white-bg row">
           <div class="sd-hero ">
             <div class="small-12 sd-hero--content columns">
-              <img class="sd-hero--logo" src="images/logo.png" />
+              <img class="sd-hero--logo" src="images/logo.svg" />
               <h1 class="sd-hero--title">Hack Day</h1>
               <h2 class="sd-hero--subtitle">
                 Qualcomm Room, Jacobs Hall<br>
