--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="row sd-white-bg">
           <div class="small-12 medium-6 large-5 columns sd-hextion sd-hextion--left">
             <div class="sd-hex sd-hex--inset">
-              <h2>3</h2>
+              <h2>2</h2>
               <p>Hours</p>
             </div>
             <div class="sd-hextion--content">
@@ -209,7 +209,7 @@
               <li>
                 <h3 class="sd-section--subheader">Do I need a team to sign up?</h3>
                 <p>
-                  <strong>Yes</strong>, since Hack Days are smaller events, we want to ensure everyone who comes is able to work with a team. Signing up with a team allows us to accept the people you'd like to work with without leaving any stragglers behind! <strong>Teams of up to 4 are allowed</strong>.
+                  <strong>Yes</strong>, since Hack Days are smaller events, we want to ensure everyone who comes is able to work with a team. Signing up with a team allows us to accept the people you'd like to work with without leaving any stragglers behind! <strong>Teams of 2-4 are allowed</strong>.
                 </p>
               </li>
               <li>
