Added footer links

--- a/index.html
+++ b/index.html
@@ -260,6 +260,10 @@
           <div class="sd-footer--hex"></div>
           <div class="sd-footer--background-helper"></div>
           <div class="sd-footer--links">
+            <ul class="sd-footer--list hide-for-large">
+              <li><a class="sd-footer--textlink" href="https://tesc.typeform.com/to/YJuhQH">Apply</a></li>
+              <li><a class="sd-footer--textlink" href="https://tesc.typeform.com/to/cXwqkW">Mentor</a></li>
+            </ul>
             <ul class="sd-footer--list">
               <li><a target="_blank" href="https://www.facebook.com/SDHacks/"><i class="fa fa-facebook-square"></i></a></li>
               <li><a target="_blank" href="https://twitter.com/sdhacks"><i class="fa fa-twitter-square"></i></a></li>
