Add ucsd only faq question

--- a/index.html
+++ b/index.html
@@ -201,6 +201,12 @@
                 </p>
               </li>
               <li>
+                <h3 class="sd-section--subheader">Can I attend Hack Day if I am not a UCSD student</h3>
+                <p>
+                  Winter Hack Day is open to <strong>UCSD students only</strong> but we hope you apply for SD Hacks 2017 in the fall! It will be open to all students.
+                </p>
+              </li>
+              <li>
                 <h3 class="sd-section--subheader">What should I bring?</h3>
                 <p>
                   Bring your <strong>student ID</strong>, <strong>computer</strong>, any <strong>peripherals</strong> you may need (chargers, monitors, etc.), any <strong>hardware</strong> that you plan on using, and an <strong>open mind</strong>. 
